2.21.0
 - feat: implement showing dataset logs in the analysis view (#140)
 - enh: more Quick View default choices than "deform" and "area_um"
 - enh: update icon theme
 - setup: pygments (for json formatting) is now an explicit dependency
2.20.1
 - fix: regression TypeError when trying to plot contour data
2.20.0
 - feat: display and handle quantitative phase imaging data
 - fix: filter range control not updating limits, displaying value "100" (#183)
 - fix: filter range control not updating handles when resized
 - enh: improve plotting performance in QuickView polygon selection mode
2.19.1
 - fix: "buyukurganci-2022" was not actually the default viscosity model
 - ref: remove distutils dependency
 - docs: add developer's section
2.19.0
 - feat: support accessing private S3 basins (#174)
 - enh: enable lut selection in analysis view plots (#71)
 - fix: only allow user to choose "R.exe" in R binary manual search (#173)
 - enh: correctly show system R binary in settings
 - ref: migrate from pyqt5 to pyqt6 (#165)
 - ref: migrate from pkg_resources to importlib.resources (#155)
 - setup: support Python 3.12
 - setup: new dependency "boto3" via "dclab[s3]""
2.18.2
 - enh: enable lut selection to plot isoelasticity lines (#71)
 - enh: replace findText with findData of comboBox_visc_model
 - fix: allow to select R binary when not found automatically
 - enh: enable lut selection for emodulus computation in bulk actions (#71)
 - enh: enable lut selection for emodulus computation (#71)
 - setup: bump dclab to 0.62.5 (properly resolve path to R executable)
2.18.1
 - setup: bump dclab to 0.61.3 (replace rpy2 with wrapper) (#73 #161)
2.18.0
 - BREAKING CHANGE: set default viscosity model for Young's modulus
   computation to "buyukurganci-2022", because it is more accurate
   and also because it is defined for the "0.83% MC-PBS" medium
 - BREAKING CHANGE: remove support for machine learning extensions
   (.modc files), because they are not used