@@ -25,6 +25,7 @@ class AnalysisView(QtWidgets.QWidget):
         self.widget_plot.pipeline_changed.connect(self.pipeline_changed)
         self.widget_slot.slot_changed.connect(self.slot_changed)
         self.widget_slot.pipeline_changed.connect(self.pipeline_changed)
+        self.tabWidget.setCurrentIndex(0)
 
     def adopt_pipeline(self, pipeline_state):
         self.widget_meta.pipeline_state = pipeline_state
@@ -34,6 +35,7 @@ class AnalysisView(QtWidgets.QWidget):
     def set_pipeline(self, pipeline):
         self.widget_filter.set_pipeline(pipeline)
         self.widget_log.set_pipeline(pipeline)
+        self.widget_tables.set_pipeline(pipeline)
         self.widget_plot.set_pipeline(pipeline)
         self.widget_slot.set_pipeline(pipeline)
         self.adopt_pipeline(pipeline.__getstate__())
@@ -41,6 +43,7 @@ class AnalysisView(QtWidgets.QWidget):
     def update_content(self):
         self.widget_filter.update_content()
         self.widget_log.update_content()
+        self.widget_tables.update_content()
         self.widget_meta.update_content()
         self.widget_plot.update_content()
         self.widget_slot.update_content()
